# multiprocess-logger

./: CMakeLists.txt  LICENSE  Opts.cmake  README.md
doxygen/html/: annotated.html  classExecFailed.html  classExecFailed__coll__graph.md5  classExecFailed__inherit__graph.map  classExecFailed__inherit__graph.md5  classExtractor-members.html  classExtractor.html  classExtractor__coll__graph.map  classExtractor__coll__graph.md5  classExtractor_a7632ce0dc24df1eeb659bb124e6b3031_cgraph.map  classExtractor_a7632ce0dc24df1eeb659bb124e6b3031_cgraph.md5  classExtractor_aaefc9c7f9b152b6380cb65c1e36ac95b_cgraph.map  classExtractor_aaefc9c7f9b152b6380cb65c1e36ac95b_cgraph.md5  classFakeChan-members.html  classFakeChan.html  classFakeChan__coll__graph.map  classFakeChan__coll__graph.md5  classFakeChan_ad3563b881623aa552d98e78c24baef6c_cgraph.map  classFakeChan_ad3563b881623aa552d98e78c24baef6c_cgraph.md5  classForkFailed.html  classForkFailed__coll__graph.map  classForkFailed__coll__graph.md5  classForkFailed__inherit__graph.md5  classNetAddr.html  classNetAddr__coll__graph.map  classNetAddr__coll__graph.md5  classNetAddr__inherit__graph.map  classNetAddr__inherit__graph.md5  classServiceManager-members.html  classServiceManager.html  classServiceManager__coll__graph.map  classServiceManager__coll__graph.md5  classServiceManager_a57a9b4739ef6da5f70bef63a6b878b41_icgraph.map  classServiceManager_a57a9b4739ef6da5f70bef63a6b878b41_icgraph.md5  classServiceManager_a7d511091ce6f7a368bfc6d8caebd25c0_cgraph.map  classServiceManager_a7d511091ce6f7a368bfc6d8caebd25c0_cgraph.md5  classServiceManager_a7d511091ce6f7a368bfc6d8caebd25c0_icgraph.map  classServiceManager_a7d511091ce6f7a368bfc6d8caebd25c0_icgraph.md5  classServiceManager_a87b207df58ccd316320d490c003c7eda_cgraph.map  classServiceManager_a87b207df58ccd316320d490c003c7eda_cgraph.md5  (+537 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enums_1.js  enumvalues_0.js  files_0.js  (+42 more)
doxygen/latex/: annotated.tex  classExecFailed.tex  classExecFailed__coll__graph.md5  classExecFailed__inherit__graph.md5  classExtractor.tex  classExtractor__coll__graph.md5  classExtractor_a7632ce0dc24df1eeb659bb124e6b3031_cgraph.md5  classExtractor_aaefc9c7f9b152b6380cb65c1e36ac95b_cgraph.md5  classFakeChan.tex  classFakeChan_ad3563b881623aa552d98e78c24baef6c_cgraph.md5  classForkFailed.tex  classForkFailed__coll__graph.md5  classForkFailed__inherit__graph.md5  classNetAddr.tex  classNetAddr__inherit__graph.md5  classServiceManager.tex  classServiceManager__coll__graph.md5  classServiceManager_a57a9b4739ef6da5f70bef63a6b878b41_icgraph.md5  classServiceManager_a7d511091ce6f7a368bfc6d8caebd25c0_cgraph.md5  classServiceManager_a7d511091ce6f7a368bfc6d8caebd25c0_icgraph.md5  classServiceManager_a87b207df58ccd316320d490c003c7eda_cgraph.md5  classServiceManager_a88f70377d5303fe8ddf0c09a31f52685_cgraph.md5  classServiceManager_a88f70377d5303fe8ddf0c09a31f52685_icgraph.md5  classServiceManager_abaa048208d3f357f320f89f108e5bada_icgraph.md5  classServiceManager_abc19f11c2147855029dad4c4ce4de0d7_cgraph.md5  classServiceManager_abc19f11c2147855029dad4c4ce4de0d7_icgraph.md5  classServiceManager_abdeb5c08d4a1243f43477cda8109446a_icgraph.md5  classSpring.tex  classSpring__coll__graph.md5  classSpring_abbbfe22a2b37ec7df976e7c2536541bf_cgraph.md5  classSpring_acd49d999d964fe6f8165163974cd2968_cgraph.md5  classregistry_1_1AbstractRegistry.tex  classregistry_1_1AbstractRegistry__coll__graph.md5  classregistry_1_1AbstractRegistry__inherit__graph.md5  classregistry_1_1AbstractRegistry_a104de6be2e407c4cfecb22ff04c7ecb5_icgraph.md5  classregistry_1_1AbstractRegistry_a5deafe61aa33b1be6b261d815e7397a1_icgraph.md5  classregistry_1_1AbstractRegistry_a8178fbb70f1cecac93f147a91e0364f5_icgraph.md5  classregistry_1_1ClientComChannel.tex  classregistry_1_1ClientComChannel__coll__graph.md5  classregistry_1_1ClientComChannel_a564ba5480214a74c5697120084cafb54_cgraph.md5  (+223 more)
extractor/: CMakeLists.txt
extractor/include/: extractor.hpp  extractor_common.hpp
extractor/src/: extractor.cpp  extractor_lcl.hpp
extractor/test/: extractor_test.cpp
registry/: CMakeLists.txt  sqlite3Config.cmake
registry/include/: registry_client.hpp  registry_common.hpp
registry/src/: monitor.cpp  registry.cpp  registry_client_lib.cpp  registry_core.cpp  registry_core.hpp  registry_lcl.hpp  registry_service.proto  service_manager.hpp
registry/test/: registry_client_tests.cpp  registry_com_tests.cpp  registry_core_tests.cpp
ring/: CMakeLists.txt
ring/include/: ring.h  ring_common.h
ring/src/: consumer.cpp  producer.cpp  ring.cpp  ring_lcl.hpp
ring/test/: ring_test.cpp
spring/: CMakeLists.txt
spring/include/: spring.hpp  spring_common.hpp
spring/src/: spring.cpp  spring_lcl.hpp
spring/test/: spring_test.cpp
